refactor: move shuffle decision to Session domain